crates/carta/tests/snapshots/golden_writer__html4__common__hard-break.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>first line<br />
second line</p>
