crates/carta/tests/snapshots/golden_writer__html4__common__header-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<h1 class="cls" id="anchor">Titled</h1>
