crates/carta/tests/snapshots/golden_writer__html4__common__headers.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<h1 id="one">One</h1>
<h2 id="two">Two</h2>
<h6 id="six">Six</h6>
