crates/carta/tests/snapshots/golden_writer__html4__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p><img src="https://example.org/i.png" alt="alt" /></p>
