crates/carta/tests/snapshots/golden_writer__html4__common__inline-code-backtick.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>use <code>a `b` c</code> here</p>
