crates/carta/tests/snapshots/golden_writer__html4__common__line-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<div class="line-block">first line<br />
second line</div>
