crates/carta/tests/snapshots/golden_writer__html4__common__link-autolink.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p><a href="http://example.com" class="uri">http://example.com</a></p>
