crates/carta/tests/snapshots/golden_writer__html4__common__link-label-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>Padding padding padding padding <a href="http://example.com/path">a
multi word link label here</a> and trailing words to push wrapping.</p>
