crates/carta/tests/snapshots/golden_writer__html4__common__list-bullet-in-ordered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol style="list-style-type: decimal">
<li>first</li>
<li>second
<ul>
<li>suba</li>
<li>subb</li>
</ul></li>
<li>third</li>
</ol>
